--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
+  
 	<title>Canvas Example</title>
 	<style type="text/css">
 		canvas{
       border: 1px solid black;
-    @media screen and (max-width: 600px){
-      canvas{
-      width:480px;
-      height:480px;
-      }
-    }  
- 
-    @media screen and (min-width: 601px){
-     canvas{
-      width:720px;
-      height:720px;
+      height: 80vh;
+      width: 80vw;
 		}
-  } 
-}  
 	</style>
-
 </head>
+
+
+
+
 <body>
   <input type="color" id="cpk" value=#FF4500> 
 	<canvas id="canvas" width="500" height="500">
-  An alternative text describing what your canvas displays. 
+
+  coool canvas
   </canvas>
 
   <script>
@@ -36,7 +30,10 @@
   var y = 25;
   var color = "red";
   var radius = 10;
-  //canvas
+ // Set canvas dimensions
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
 
   function draw(){
     ctx.beginPath();
@@ -46,12 +43,11 @@
   //draws circle  
   }
 
-//offsets the currsor to be 0,0 at the corner of the canvas
   window.addEventListener('mousemove', function(e){
   x = e.x ;
   y = e.y;  
- // console.log("event= " + x );
-//console.log(y);
+  console.log(x);
+  console.log(y);
   draw();
   })
 
@@ -84,17 +80,12 @@
       radius = 50;
   })
 
-  window.addEventListener('touchmove', function (e) {
+  window.addEventListener('touchmove', function(e) {
       canvas.x = e.touches[0].screenX;
       canvas.y = e.touches[0].screenY;
-    })
-
-  window.addEventListener('touchmove', function(e){
-  x = e.x;
-  y = e.y;
-  //console.log("x = "+x );
-  //console.log("y = "+y);
-  draw();
+      draw();
+    //console.log("x = "+x );
+    //console.log("y = "+y)
   })
   
   //clears on orientation change
@@ -109,13 +100,9 @@
 var colorpicker = document.getElementById("cpk");
 colorpicker.addEventListener("change",function(e){
   color = colorpicker.value;
-}
-) 
-console.log(colorpicker.value)
-
+  //console.log(colorpicker.value)
+}) 
 
 </script>
-
 </body>
-
 </html>
