--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   var y = 25;
   var color = "red";
   var radius = 10;
+  var touchX;
+  var touchY;
+
  // Set canvas dimensions
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
@@ -87,7 +90,20 @@
     //console.log("x = "+x );
     //console.log("y = "+y)
   })
-  
+
+// Get touch position and initiate drawing
+function drawTouch(e) {
+// Get x,y offsets
+if(e.touches) {
+if (e.touches.length == 1) {
+touchX=e.touches[0].clientX - can.getBoundingClientRect().left;
+touchY=e.touches[0].clientY - can.getBoundingClientRect().top;
+  }
+}
+}
+// Drawing loop
+if (touched) {draw(touchX,touchY); event.preventDefault();}
+
   //clears on orientation change
   window.addEventListener("orientationchange", function(e) {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
